fix spacing for validation

--- a/signup-form/styles.css
+++ b/signup-form/styles.css
@@ -84,7 +84,7 @@ button {
   grid-template-columns: 300px 300px;
   grid-template-rows: 55px 55px 55px;
   grid-auto-rows: 50px;
-  row-gap: 30px;
+  row-gap: 40px;
   column-gap: 10px;
   padding-top: 10px;
   padding-bottom: 50px;
